--- a/Footer.css
+++ b/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   padding: 2rem 1rem;
   text-align: center;
-  background: #00aaff;
+  background: #0a0a0a;
   color: #fff;
 }
 
@@ -13,7 +13,7 @@
 }
 
 .footer-socials a {
-  color: #fff;
+  color: #00aaff;
   transition: color 0.3s, transform 0.3s;
 }
 
